<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:keepScreenOn="true">

    <!-- 装饰性背景元素 -->
    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/card_gradient_circle"
        android:alpha="0.1"
        android:translationX="150dp"
        android:translationY="-150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/card_gradient_circle"
        android:alpha="0.08"
        android:translationX="-125dp"
        android:translationY="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 内容区域 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 应用图标 -->
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!-- 应用名称 -->
        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <!-- 锁定提示文本 -->
        <TextView
            android:id="@+id/lock_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_m"
            android:text="@string/app_locked_message"
            android:textAlignment="center"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/text_size_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_text" />

        <!-- 解锁按钮 -->
        <Button
            android:id="@+id/unlock_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:layout_marginTop="@dimen/spacing_xl"
            android:backgroundTint="@color/color_primary"
            android:text="@string/unlock"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lock_message_text" />

        <!-- 加载指示器 -->
        <ProgressBar
            android:id="@+id/lock_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/unlock_button"
            app:layout_constraintEnd_toEndOf="@id/unlock_button"
            app:layout_constraintStart_toStartOf="@id/unlock_button"
            app:layout_constraintTop_toTopOf="@id/unlock_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>